[project]
name = "devcontainer-spark-3-3-2"
dynamic = [
  "version",
  "urls"
]
description = "Docker image for Spark 3.3.2, for use in devcontainers"
readme = "README.md"
requires-python = ">=3.8, <3.9"
dependencies = [
    "numpy<2",
    "pandas<2",
    "polars",
    "pyarrow<12",
    "matplotlib",
    "seaborn",
    "openpyxl",
    "pyspark==3.3.2",
    "jupyterlab>=4.3.8",
    "statsmodels",
]

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pre-commit",
  "ipykernel",
]
